security: remove credentials from tracking, update .gitignore - Removed .clasp.json (contains script ID) from git tracking - Removed login_output.txt (contains OAuth token) from git tracking - Updated .gitignore to block credentials, auth artifacts, and env files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
-.DS_Store
+# Dependencies
 node_modules/
 
+# OS files
+.DS_Store
+Thumbs.db
+
+# CLASP credentials & config (contains script IDs)
+.clasp.json
+.clasprc.json
+
+# Auth/login artifacts
+login_output.txt
+
+# Environment & secrets
+.env
+.env.*
+*.key
+*.pem
+
+# Temp/build
+temp_clone/
 Code.js
+
+# Editor settings
+.vscode/
