feat: dynamic theming, variation groups, factory reset (v0.9.01)
Theme Customization:

- Add PRIMARY/SECONDARY colour named ranges for admin-defined theming

- Read colour definitions from COLOUR_FORMAT_DEFINITIONS named range

- Support named colours (Orange, Teal, etc.) and hex values

- Auto-read text colour from cell font colour for raw hex values

- FAB button now uses secondary colour

Variation Groups:

- Add Variation Groups and Values table support in SETTINGS

- Render individual value checkboxes per group in admin form

- Select All toggle and Other input with auto-save to sheet

- Auto-derive Reference Character from SKU (strip spaces/hyphens)

- Restructure admin form into Product Data and Variation Options sections

Factory Reset:

- Add SHEET HEADER BACKUPS sheet-driven factory reset system

- Support Sheet, Range, and Table type definitions

- Dual confirmation dialogs before execution

- Clear Script Properties (preserve master/copy registry)

- New System submenu in Order System menu

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Thumbs.db
 # CLASP credentials & config (contains script IDs)
 .clasp.json
 .clasprc.json
+.claspignore
 
 # Auth/login artifacts
 login_output.txt
@@ -17,10 +18,17 @@ login_output.txt
 .env.*
 *.key
 *.pem
+*.secret
+
+# Legacy .gs files (we use .js via clasp)
+*.gs
 
 # Temp/build
 temp_clone/
-Code.js
 
 # Editor settings
 .vscode/
+.idea/
+
+# System backups and sensitive runtime data
+_SYSTEM_META/
