chore: remove dev logs from tracking, add to .gitignore
- SESSION_LOG_*.md, ACTION_PLAN*.md, MASTER_WORKFLOW.md now gitignored

- Removed 4 tracked dev log files (files remain locally, just untracked)

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ temp_clone/
 
 # System backups and sensitive runtime data
 _SYSTEM_META/
+
+# Development logs & plans (not deployable code)
+SESSION_LOG_*.md
+ACTION_PLAN*.md
+MASTER_WORKFLOW.md
